--- a/vista/AnadirTurno.html
+++ b/vista/AnadirTurno.html
@@ -22,9 +22,10 @@
           
       </nav>
    </div>
+
     <form action="http://localhost:3000/agregarTurno" method="post">
-    <p><label>fecha</label><label class="col-sm-2 col-form-label"><input type="date" name="fecha" class="form-control"></label></p>
-    <p><label>hora</label><label class="col-sm-2 col-form-label"><input type="time" name="hora" class="form-control"></label></p>
+    <p><label>Fecha</label><label class="col-sm-2 col-form-label"><input type="date" name="fecha" class="form-control"></label></p>
+    <p><label>Hora</label><label class="col-sm-2 col-form-label"><input type="time" name="hora" class="form-control"></label></p>
     <div id="table"></div>
   <br>
       <div id="tables"></div>
