--- a/vista/AnadirDoctor.html
+++ b/vista/AnadirDoctor.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Document</title>
+    <title>doctor</title>
 </head>
 <body>
-    <h1>Añadir Doctores</h1>
+   
    
     <div class="navbar navbar-expand-lg bg-light">
         <nav class="nav nav-tabs">
@@ -21,7 +21,8 @@
             
         </nav>
      </div>
-      <h1>A continuacion Ingrese los datos correspondientes</h1>
+    
+      <h3>A continuacion Ingrese los datos correspondientes</h3>
     <form action="http://localhost:3000/agregarDoctor" method="post">
         <p><label>Nombre</label><label  for="inputPassword" class="col-sm-2 col-form-label"><input type="text" name="names"></label></p>
         <p><label>Apellido</label><label  for="inputPassword" class="col-sm-2 col-form-label"><input type="text" name="apellido"></label></p>
