--- a/vista/ListarTurnos.html
+++ b/vista/ListarTurnos.html
@@ -10,12 +10,12 @@
 <H1>lista de turnos</H1>
 <div class="navbar navbar-expand-lg bg-light">
     <nav class="nav nav-tabs">
-        <a class="nav-link active" aria-current="page" href="http://localhost:3000/agregarPaciente">Agregar Paciente</a>
-        <a class="nav-link active" aria-current="page"  href="http://localhost:3000/agregarDoctor">Agregar Doctor</a>
-        <a class="nav-link active" aria-current="page" href="http://localhost:3000/VerDoctores">ver Doctores</a>
-        <a class="nav-link active" aria-current="page" href="http://localhost:3000/VerPacientes">ver Pacientes</a>
-        <a class="nav-link active" aria-current="page" href="http://localhost:3000/AgregarTurno">Asignar Turno</a>
-        <a class="nav-link active" aria-current="page" href="http://localhost:3000/MostarTurno">listar turno</a>
+      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com//agregarPaciente">Agregar Paciente</a>
+      <a class="nav-link active" aria-current="page"  href="https://clinca.herokuapp.com//agregarDoctor">Agregar Doctor</a>
+      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com//VerDoctores">ver Doctores</a>
+      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com//VerPacientes">ver Pacientes</a>
+      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com//AgregarTurno">Asignar Turno</a>
+      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com//MostarTurno">listar turno</a>
         
     </nav>
  </div>
