--- a/vista/VerPacientes.html
+++ b/vista/VerPacientes.html
@@ -12,12 +12,12 @@
   
   <div class="navbar navbar-expand-lg bg-light">
     <nav class="nav nav-tabs">
-      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com//agregarPaciente">Agregar Paciente</a>
-      <a class="nav-link active" aria-current="page"  href="https://clinca.herokuapp.com//agregarDoctor">Agregar Doctor</a>
-      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com//VerDoctores">ver Doctores</a>
-      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com//VerPacientes">ver Pacientes</a>
-      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com//AgregarTurno">Asignar Turno</a>
-      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com//MostarTurno">listar turno</a>
+      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com/agregarPaciente">Agregar Paciente</a>
+      <a class="nav-link active" aria-current="page"  href="https://clinca.herokuapp.com/agregarDoctor">Agregar Doctor</a>
+      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com/VerDoctores">ver Doctores</a>
+      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com/VerPacientes">ver Pacientes</a>
+      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com/AgregarTurno">Asignar Turno</a>
+      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com/MostarTurno">listar turno</a>
         
     </nav>
  </div>
