--- a/vista/ListarTurnos.html
+++ b/vista/ListarTurnos.html
@@ -21,7 +21,7 @@
  </div>
 <body>
     <h1>Turnos</h1>
-    <form action="http://localhost:3000/MostarTurno" method="GET">
+    <form action="https://clinca.herokuapp.com/MostarTurno" method="GET">
      <table class="table table-striped">
      <thead>
        <tr>
