--- a/vista/AnadirTurno.html
+++ b/vista/AnadirTurno.html
@@ -23,7 +23,7 @@
       </nav>
    </div>
 <h3>Gestionar Turno</h3>
-    <form action="http://localhost:3000/agregarTurno" method="post">
+    <form action="https://clinca.herokuapp.com/agregarTurno" method="post">
     <p><label>Fecha</label><label class="col-sm-2 col-form-label"><input type="date" name="fecha" class="form-control"></label></p>
     <p><label>Hora</label><label class="col-sm-2 col-form-label"><input type="time" name="hora" class="form-control"></label></p>
     <div id="table"></div>
@@ -33,7 +33,7 @@
     <input type="submit" value="send" >
 </form>
     <script>
-         var url = 'http://localhost:3000/VerDoctoresTable';
+         var url = 'https://clinca.herokuapp.com/VerDoctoresTable';
          fetch(url)
               .then(response => response.json())
               .then(listarDoctores => mostrarDoctores(listarDoctores))
@@ -53,7 +53,7 @@
        
               };
               
-              var url = 'http://localhost:3000/VerPacientesTable';
+              var url = 'https://clinca.herokuapp.com/VerPacientesTable';
          fetch(url)
               .then(response => response.json())
               .then(listarPacientes => mostrarPacientes(listarPacientes))
