--- a/vista/VerPacientes.html
+++ b/vista/VerPacientes.html
@@ -21,7 +21,7 @@
         
     </nav>
  </div>
-   <form action='http://localhost:3000/VerPacientes' method="GET">
+   <form action='https://clinca.herokuapp.com/VerPacientes' method="GET">
     <table class="table table-striped">
     <thead>
       <tr>
@@ -40,7 +40,7 @@
    
    </table>
    <script>
-   var url = 'http://localhost:3000/VerPacientesTable';
+   var url = 'https://clinca.herokuapp.com/VerPacientesTable';
    fetch(url)
         .then(response => response.json())
         .then(listarPacientes => mostrarPacientes(listarPacientes))
