--- a/vista/AnadirDoctor.html
+++ b/vista/AnadirDoctor.html
@@ -23,7 +23,7 @@
      </div>
     
       <h3>A continuacion Ingrese los datos correspondientes</h3>
-    <form action="https://clinca.herokuapp.com//agregarDoctor" method="post">
+    <form action="https://clinca.herokuapp.com/agregarDoctor" method="post">
         <p><label>Nombre</label><label  for="inputPassword" class="col-sm-2 col-form-label"><input type="text" name="names"></label></p>
         <p><label>Apellido</label><label  for="inputPassword" class="col-sm-2 col-form-label"><input type="text" name="apellido"></label></p>
         <p><label>Matricula</label><label  for="inputPassword" class="col-sm-2 col-form-label"><input type="number" name="matricula"></label></p>
