--- a/vista/AnadirPaciente.html
+++ b/vista/AnadirPaciente.html
@@ -22,7 +22,7 @@
      </div>
     
     <h3>A continuacion Ingrese los datos correspondientes</h3>
-    <form action="https://clinca.herokuapp.com//agregarPaciente" method="post">
+    <form action="https://clinca.herokuapp.com/agregarPaciente" method="post">
         <p><label>Nombre</label><label for="inputPassword" class="col-sm-2 col-form-label"><input type="text" name="name"></label></p>
         <p><label>Apellido</label><label for="inputPassword" class="col-sm-2 col-form-label"><input type="text" name="apellido"></label></p>
         <p><label>Edad</label><label for="inputPassword" class="col-sm-2 col-form-label"><input type="number" name="edad"></label></p>
