--- a/vista/ListarTurnos.html
+++ b/vista/ListarTurnos.html
@@ -39,7 +39,7 @@
     
     </table>
     <script>
-    var url = 'http://localhost:3000/mostrarTurnosTabla';
+    var url = 'https://clinca.herokuapp.com/mostrarTurnosTabla';
     fetch(url)
          .then(response => response.json())
          .then(listarTurnos => mostarTurnos(listarTurnos))
