--- a/vista/ListarTurnos.html
+++ b/vista/ListarTurnos.html
@@ -48,7 +48,7 @@
          const mostarTurnos = (turnos)=>{
              var turnosTabla= "";
  
-             console.log(turnos);
+             console.log(turnos[0]);
              
              for(var i=0; i<turnos.length; i++){
                turnosTabla = turnosTabla + "<tr><td>" + i + "</td><td>"+ turnos[i].fecha + "</td><td>"+ turnos[i].hora + "</td><td>"+ turnos[i].paciente + "</td><td>"+ turnos[i].doctor +"</td><td>"+"</tr>";
