--- a/vista/ClinicaSA.html
+++ b/vista/ClinicaSA.html
@@ -31,6 +31,7 @@
             <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com/VerPacientes">ver Pacientes</a>
             <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com/AgregarTurno">Asignar Turno</a>
             <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com/MostarTurno">listar turno</a>
+            <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com/EliminarTurno">Eliminar Turno</a>
             
         </nav>
      </div>
