--- a/vista/VerPacientes.html
+++ b/vista/VerPacientes.html
@@ -18,7 +18,7 @@
       <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com/VerPacientes">ver Pacientes</a>
       <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com/AgregarTurno">Asignar Turno</a>
       <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com/MostarTurno">listar turno</a>
-        
+      <a class="nav-link active" aria-current="page" href="https://clinca.herokuapp.com/EliminarTurno">Eliminar Turno</a>
     </nav>
  </div>
    <form action='https://clinca.herokuapp.com/VerPacientes' method="GET">
